@@ -546,6 +546,8 @@ g_thread_fail (void)
   g_error ("The thread system is not yet initialized.");
 }
 
+#define G_NSEC_PER_SEC 1000000000
+
 static guint64
 gettime (void)
 {
@@ -560,7 +562,7 @@ gettime (void)
 
   gettimeofday (&tv, NULL);
 
-  return (guint64) tv.tv_sec * 1000000000 + tv.tv_usec * 1000; 
+  return (guint64) tv.tv_sec * G_NSEC_PER_SEC + tv.tv_usec * (G_NSEC_PER_SEC / G_USEC_PER_SEC); 
 #endif
 }
 
